# cpp_music_viz

./: CMakeLists.txt  README.md  Shader.h  complex_shader.glsl  config_file.txt  dft_shader.glsl  fft2d.cc  glad.c  install.sh  main.cpp  mandel_julia.cpp  quad.f.glsl  sfml_sound.cpp  sfml_sound_example.cpp  texture_fs.glsl
lib/glad/include/glad/: glad.h
